--- a/src/comps/header2/header2.css
+++ b/src/comps/header2/header2.css
@@ -5,7 +5,7 @@
 	position: fixed; 
   	width: 100% ;
   	z-index: 14 ;
-  	height: 7vh ;
+  	height: 8vh ;
   	overflow: visible;
 	color: white ;
 	justify-content: space-between;
@@ -24,4 +24,14 @@
 	padding: 0 0.4em .3em ;
 	border-radius: 1rem ;
 	/*-webkit-text-stroke: 2px blue;*/
+}
+
+.header2-login
+{
+	margin-right: 2vw ;
+}
+
+.header2-menu
+{
+	margin-left: 2vw ;
 }
