--- a/src/comps/header2/header2.css
+++ b/src/comps/header2/header2.css
@@ -4,6 +4,7 @@
 	background-color: steelblue ;
 	position: fixed; 
   	width: 100% ;
+  	top: 0 ;
   	z-index: 14 ;
   	height: 8vh ;
   	overflow: visible;
