--- a/src/comps/Image/image.css
+++ b/src/comps/Image/image.css
@@ -5,6 +5,7 @@
 	background-size: contain;
 	background-repeat: no-repeat;
 	margin: auto ;
+	box-shadow: 1px 1px 6px 0 rgba(0,0,0,0.4);
 	display: inline-block;
 	/*border: 1px solid black;*/
 }
