--- a/src/comps/detection/Content/detcont.css
+++ b/src/comps/detection/Content/detcont.css
@@ -28,9 +28,37 @@
 	box-shadow: none ;
 	border-top-right-radius: 1rem ;
 	border-bottom-right-radius: 1rem ; 
+	overflow: hidden;
+  	transition: color 0.5s ease-in-out;
+  	z-index: 1;
+  	position: relative;
 }
 
 .input-con input:focus, .input-con button:focus
 {
 	outline: 0 ;
+}
+
+.input-con button::before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  background-color: deepskyblue;
+  transform-origin: center;
+  transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
+  transition: transform 0.7s ease-in-out;
+}
+
+.input-con button:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.input-con button:hover::before {
+  transform: translate3d(-50%, -50%, 0) scale3d(15, 15, 15);
 }
