--- a/src/comps/BackGround/background.css
+++ b/src/comps/BackGround/background.css
@@ -5,6 +5,14 @@
 	bottom: 0 ;
 	left: 0 ;
 	right: 0;
-	background-color: darkblue ;
 	z-index: -10 ;
+	transition: all 2s ;
+}
+
+.particle
+{
+	position: fixed ;
+	width: 100%;
+	height: 100% ;
+	z-index: -5 ;
 }
