--- a/src/comps/header2/header2.css
+++ b/src/comps/header2/header2.css
@@ -1,17 +1,22 @@
 .header2
 {
 	display: flex ;
-	background-color: steelblue ;
 	position: fixed; 
-  	width: 100% ;
-  	top: 0 ;
-  	z-index: 14 ;
-  	height: 8vh ;
-  	overflow: visible;
+	width: 100% ;
+	top: 0 ;
+	z-index: 14 ;
+	height: 8vh ;
+	overflow: visible;
 	color: white ;
+  transition: background-color 2s ;
 	justify-content: space-between;
 }
 
+/*.ovname
+{
+  text-shadow: -3px -3px 0 steelblue, 3px -3px 0 steelblue, -3px 3px 0 steelblue, 3px 3px 0 steelblue;
+}
+*/
 .header2-login, .header2-menu
 {
 	font-size: 2rem ;
@@ -19,17 +24,28 @@
 
 .ov
 {
-	background-color: steelblue ;
-  	height: 10vh;
+	height: 10vh;
 	font-size: 4rem ;
 	padding: 0 0.4em .3em ;
 	border-radius: 1rem ;
-	/*-webkit-text-stroke: 2px blue;*/
+  	transition: background-color 2s ;
 }
 
 .header2-login
 {
 	margin-right: 2vw ;
+	background-color: white ;
+	padding: .1em .5em ;
+  	transition: color 2s ;
+  	transition: background-color .5s ;
+  	border-left: 1px solid white;
+  	border-right: 1px solid white;
+  	border-bottom: 1px solid white;
+}
+
+.header2-login:hover
+{	background-color: transparent;
+	color: white !important;
 }
 
 .header2-menu
@@ -41,6 +57,7 @@
 {
 	display: inline-block; 
 	margin: 0;
+
 }
 
 .h2-para a , .header2-login a
@@ -52,7 +69,7 @@
 .eye
 {
 	width: 65px ;
-	/*transform: translateY(9px);*/
+	transform: translateY(9px);
 	position: relative;
 	z-index: 1 ;
 }
