--- a/src/comps/Login/Login.css
+++ b/src/comps/Login/Login.css
@@ -6,8 +6,6 @@
   bottom: 0 ;
   left: 0 ;
   right: 0 ; 
-  background-color: transparent;
-  /*background-color: #ccddff ;*/
   text-align: center;
 }
 
@@ -16,6 +14,7 @@
   border: 1px solid black;
   margin: 10em auto 1em ;
   padding: 2em ;
+  background-color: rgba(255, 255, 255, .1);
   display: inline-block;
   box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
   border-radius: .5rem;
@@ -68,7 +67,7 @@
 {
   background-color: black ;
   color: #ccddff ;
-  box-shadow: inset 0 0 0 1px #ccddff;
+  /*box-shadow: inset 0 0 0 1px #ccddff;*/
 }
 
 .btn-con button:focus
@@ -94,14 +93,10 @@
   border: 2px solid black;
   border-radius: .5rem;
   transition: all .3s ;
+  text-decoration: none;
 }
 
-.btn-con2 :focus
-{
-  outline: 0 ;
-}
-
-.btn-con2 :hover
+.btn-con2:hover
 {
   background-color: black ;
   color: #ccddff ;
