--- a/src/comps/header2/header2.css
+++ b/src/comps/header2/header2.css
@@ -26,7 +26,7 @@
 .header2-menu
 {
 	border: 1px solid white;
-	padding: .9vw .5vw .5vw ;
+	padding: 12px 6.6px 6.6px ;
 	margin-top: .4vh ; 
 }
 .ov
