--- a/src/comps/detection/Result/rescolor.css
+++ b/src/comps/detection/Result/rescolor.css
@@ -5,3 +5,16 @@
 	margin-top: 1em ;
 	flex-wrap: wrap ;
 }
+
+.face-box
+{
+	background-color: white ;
+	border-radius: .5rem ;
+	margin: 0.1em auto ;
+}
+
+.face-con
+{
+	text-align: center;
+	/*border: 1px solid black ;*/
+}
