--- a/src/comps/HomeTile/hometile.css
+++ b/src/comps/HomeTile/hometile.css
@@ -9,7 +9,7 @@
 	justify-content: center;
 	align-items: center;
 	color: white;
-	font-size: 4rem;
+	font-size: 4.83vw;
 	font-weight: 500 ;
 	transition: all .5s ;
 	font-family: 'Baloo', cursive;
