face working finally

--- a/src/comps/detection/Content/detcont.css
+++ b/src/comps/detection/Content/detcont.css
@@ -17,6 +17,7 @@
 	border-bottom-left-radius: 1rem ;
 	border: 1px solid white ;
 	transition: color 2s ;
+	width: 35vw;
 }
 
 .input-con input::selection
