--- a/src/comps/detection/Result/rescolor.css
+++ b/src/comps/detection/Result/rescolor.css
@@ -10,8 +10,8 @@
 {
 	border-radius: .5rem ;
 	margin: 0.1em auto ;
-	background-repeat: no-repeat;
-	/*background-size: cover;*/
+	/*transform: scale(0.8);*/
+	overflow: hidden ;
 }
 
 .face-con
