--- a/src/comps/Login/Register.css
+++ b/src/comps/Login/Register.css
@@ -6,8 +6,6 @@
   bottom: 0 ;
   left: 0 ;
   right: 0 ; 
-  background-color: transparent;
-  /*background-color: #ccddff ;*/
   text-align: center;
 }
 
@@ -16,6 +14,7 @@
   border: 1px solid black;
   margin: 10em auto 1em ;
   padding: 2em ;
+  background-color: rgba(255, 255, 255, .1);
   display: inline-block;
   box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
   border-radius: .5rem;
