--- a/src/comps/LoginMenu/menu.css
+++ b/src/comps/LoginMenu/menu.css
@@ -16,7 +16,8 @@
 {	font-size: 2rem ;
 	text-decoration: none ;
 	color : black !important;
-	font-family : 'Teko', sans-serif ;
+	font-family: 'Roboto', sans-serif;
+	
 }
 
 .item:hover
