--- a/src/comps/LoginMenu/menu.css
+++ b/src/comps/LoginMenu/menu.css
@@ -23,7 +23,9 @@
 .item:hover
 {
 	background-color: darkgray !important;
-	transform: scale(1.3);
+	/*transform: scale(1.3);*/
+	background-color: black ;
+	text-decoration-color: white ;
 }
 
 .pi
