--- a/src/comps/History/History.css
+++ b/src/comps/History/History.css
@@ -1,11 +1,24 @@
 .test
 {
-	height: 50%;
-	width: 100% ;
-	display: flex;
-	justify-content: left;
-	align-items: center;
-	font-size: 3rem ;
-	text-decoration: none ;
-	font-family: 'Roboto', sans-serif;
+	border: 1px solid black;
+	margin: 10em 3em 2em ;
+	padding: 1.5em ;
+	background-color: rgba(255, 255, 255, .1);
+	/*display: inline-block;*/
+	box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
+	border-radius: .5rem;
+	/*position: fixed;*/
+	z-index: -1 ;
+	top: 0;
+	bottom: 0 ;
+	left: 0 ;
+	right: 0 ;
+	text-align: center; 
+}
+
+.title
+{
+	/*justify-content: center	;*/
+	border : 1px solid black ;
+
 }
