--- a/src/comps/UserProfile/UserProfile.css
+++ b/src/comps/UserProfile/UserProfile.css
@@ -29,6 +29,13 @@
   display : flex ;
 }
 
+.flex
+{
+  display: flex ;
+  /*margin : 3em ;*/
+  justify-content: space-between;
+}
+
 .left
 {
   display: flex ;
