--- a/src/comps/UserProfile/UserProfile.css
+++ b/src/comps/UserProfile/UserProfile.css
@@ -1,9 +1,9 @@
 .propfileBox
 {
   border: 1px solid black;
-  margin: 10em 2em 2em ;
+  margin: 6em 2em 2em ;
   padding: 1.5em ;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, .3);
   /*display: inline-block;*/
   box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
   border-radius: .5rem;
@@ -14,6 +14,12 @@
   left: 0 ;
   right: 0 ; 
   /*text-align: center;*/
+}
+
+.heading
+{
+  justify-content: center;
+  font-size: 2em ;
 }
 
 .ptest
@@ -51,9 +57,10 @@
   justify-content: left ;
   background-image : url('../LoginMenu/profile.png') ; 
   background-size: cover ;
-  height: 8.5em;
+  height: 7em;
   border-radius: 50% ;
   position: relative ;  
+  width: 7em ;
 }
 
 
