--- a/src/comps/UserProfile/UserProfile.css
+++ b/src/comps/UserProfile/UserProfile.css
@@ -4,31 +4,25 @@
   margin: 6em 2em 2em ;
   padding: 1.5em ;
   background-color: rgba(255, 255, 255, .3);
-  /*display: inline-block;*/
   box-shadow: 4px 4px 8px 0 rgba( 0, 0, 0, .2 );
   border-radius: .5rem;
-  /*position: fixed;*/
   z-index: -1 ;
   top: 0;
   bottom: 0 ;
   left: 0 ;
   right: 0 ; 
-  /*text-align: center;*/
 }
 
 .heading
 {
-  justify-content: center;
-  font-size: 2em ;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 3em ;
 }
 
 .ptest
 {
-	/*height: 50%;*/
-	/*width: 90% ;*/
-	/*display: flex;*/
 	justify-content: space-evenly ;
-	/*align-items: center;*/
 	font-size: 1.5rem ;
 	text-decoration: none ;
 	font-family: 'Roboto', sans-serif;
@@ -38,7 +32,6 @@
 .flex
 {
   display: flex ;
-  /*margin : 3em ;*/
   justify-content: space-between;
 }
 
@@ -47,9 +40,6 @@
   display: flex ;
   flex-direction: column ;
   margin-left: 2em ;
-  /*position: relative ;
-  top : 0 ;
-  left : 0 ;*/
 }
 
 .left_corner_one
@@ -72,18 +62,12 @@
   position: absolute ;
   bottom: 0 ;
   right: 0 ;
-  /*opacity: 0 ;*/
   border: 1px solid white;
-  /*display: flex;*/
-  
-  /*justify-content: center;*/
-  /*align-items: center;*/
 }
 
 
 .right
 {
-  /*refer psymemt for this.*/
   display: flex;
   width: 70% ;
   margin-left: 5em;
@@ -105,7 +89,6 @@
 
 .right, .right_corner_one, .right_corner_two
 {
-  /*border : 1px solid black;*/
 }
 
 
@@ -118,26 +101,14 @@
   font-weight: bold ;
   transition: all 0.4s ;
   letter-spacing: 0.05em ;
-  color: blue ;
+  color: white !important;
+  border : 2px solid rgb(130, 195, 250);
+  transition: background-color 2s ;
 }
 
 .button:hover
 {
   color: white !important;
-  /*background-color: transparent;*/
   transition: 1.4s ;
   border: 2px solid white !important;
-}
-
-.button-a
-{
-  color: white !important;
-  border : 2px solid rgb(130, 195, 250);
-  /*border-top : 2px solid white !important;*/
-  transition: background-color 2s ;
-}
-
-.button-a:hover
-{
-  /*background-color: transparent;*/
 }
