--- a/src/comps/UserProfile/UserProfile.css
+++ b/src/comps/UserProfile/UserProfile.css
@@ -87,7 +87,7 @@
 
 .button
 {
-  margin: 0.5em 0.2em ;
+  margin: 1em 0.4em 0.5em 0.4em ;
   padding: 0.5em 2em ;
   background-color: transparent;
   font-size: 1.5rem ;
@@ -96,7 +96,7 @@
   letter-spacing: 0.05em ;
   color: white ;
   border : 2px solid black;
-  transition: all 1s ;
+  transition: all 0.5s ;
 }
 
 .button:hover
