logout button in user profile start working

--- a/src/comps/ClickInfo/clickinfo.css
+++ b/src/comps/ClickInfo/clickinfo.css
@@ -13,22 +13,23 @@
 	color : gainsboro !important;
 	background-color: #8B0000 ;
 	padding : 1vh ;
-	margin-right : 3.2em;
+	margin-right : 0.4em;
 	font-size : 1.5rem ;
 	border-radius: 0.4rem ;
-	transition: all 0.5s ;
+	transition: all 0.4s ;
 }
 
 .ci-btn:hover
 {
-	transform: scale(1.2) ;
+	transform: scale(1.01) ;
 }
 
 .ci-con
 {
+	border : 1px solid black ;
 	display: flex ;
 	justify-content: space-between;
-	margin: 2em;
+	margin: 1.2em;
 }
 
 @media (max-width: 600px) {
