--- a/src/comps/UserProfile/UserProfile.css
+++ b/src/comps/UserProfile/UserProfile.css
@@ -11,12 +11,18 @@
   bottom: 0 ;
   left: 0 ;
   right: 0 ; 
+
+}
+
+.bold
+{
+  font-weight: bold;
 }
 
 .heading
 {
   text-align: center;
-  text-decoration: underline;
+  font-weight: bold;
   font-size: 3em ;
 }
 
@@ -39,13 +45,22 @@
 {
   display: flex ;
   flex-direction: column ;
-  margin-left: 2em ;
+  margin-left: 1em ;
+  /*margin-right: 2em ;*/
 }
 
 .left_corner_two
 {
   display: flex ;
   flex-direction: column ;
+}
+
+.fdr
+{ 
+  display: flex;
+  flex-direction: row ; 
+  justify-content: space-between ;
+
 }
 
 .left_corner_one
@@ -65,6 +80,7 @@
   width: 30% ;
   justify-content: center;
   position: absolute ;
+  margin-left: 1em ;
   bottom: 0 ;
   right: 0 ;
   border: 1px solid white;
@@ -107,7 +123,7 @@
 
 .button:hover
 {
-  transform: scale(1.03);
+  transform: scale(1.1);
   background-color: black ; 
   border: 2px solid white ;
 }
